--- a/index.html
+++ b/index.html
@@ -1,9 +1,54 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Nikita Gupta</title>
+		<title>My portfolio</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<h2>My portfolio</h2>
+		<nav>
+			<ul id='navbar'>
+			  <li><a href="#welcome-section">About</a></li>
+			  <li><a href="#projects">Work</a></li>
+			  <li><a href="#profiles">Contact</a></li>
+			</ul>
+		  </nav>
+		<div id="welcome-section" class="int">
+		<div class="flex-container">
+			<div>
+			<img src="https://media.licdn.com/dms/image/C4D03AQFoQ5ZNsUNePQ/profile-displayphoto-shrink_200_200/0?e=1545264000&v=beta&t=alNIEC9Ka97Dho_KhWWBdVXfmPM2gyyVk9ai41g4GpA" alt="my picture" class="avtar"/>
+			</div>
+			<div>
+			<h1 id="title">Hey! I am Nikita.</h1>
+			  <h4> A web developer.</h4>
+			</div>
+			</div>
+		</div>
+		<div id="projects" class="flex-two">
+		   <div class="project-tile">
+			   <img src="https://drive.google.com/uc?id=1ARAN4sSD8oT4TC-7JeeGFv1dGeh36fCU" class="img-thumbnail thumb" alt="Tourist Website"/>
+			 <a href="https://github.com/ng0035/TouristWebsite" target="_blank">Tourist Website</a>
+			</div>
+			 <div class="project-tile">
+			   <img src="https://raw.githubusercontent.com/ng0035/Online-Exam-System/master/home.png" class="img-thumbnail thumb" alt="Tourist Website"/>
+			  <a href="https://github.com/ng0035/Online-Exam-System" target="_blank">Online Examination System</a>
+			</div>
+				<div class="project-tile">
+			   <img src="https://raw.githubusercontent.com/ng0035/random-quote-generator/master/Screenshot%20from%202018-10-18%2010-36-17.png" class="img-thumbnail thumb" alt="Tourist Website"/>
+			  <a href="https://github.com/ng0035/random-quote-generator" target="_blank">Random Quote Generator</a>
+			</div>  
+		</div>
+		 <h2 align="center"> Let's Connect!</h2>
+		<div id="profiles">
+		  <a id="profile-link" href="https://github.com/ng0035" target="_blank">
+		  <img src="https://drive.google.com/uc?id=1d1Abwk2GGxGrxORu5exz4hKOAnv5o9ar" alt="github"/>
+		  </a>
+		  <a id="profile-link" href="https://codepen.io/ng0035" target="_blank">
+		  <img src="https://drive.google.com/uc?id=1TwSnP-B90DoOXoW_t4XZJ-OG-urdKtTm" alt="codepen"/>
+		  </a>
+		  <a id="profile-link" href="https://www.linkedin.com/in/nikitagupta0809/" target="_blank">
+		  <img src="https://drive.google.com/uc?id=1qXt1rv51utNG1aEYRkyWfoNL0FUr-tM7" alt="linkedin"/>
+		  </a>
+		  
+		</div>
 	</body>
 </html>
