--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div id="welcome-section" class="int">
 		<div class="flex-container">
 			<div>
-			<img src="https://media.licdn.com/dms/image/C4D03AQFoQ5ZNsUNePQ/profile-displayphoto-shrink_200_200/0?e=1545264000&v=beta&t=alNIEC9Ka97Dho_KhWWBdVXfmPM2gyyVk9ai41g4GpA" alt="my picture" class="avtar"/>
+			<img src="image.jpg" alt="my picture" class="avtar"/>
 			</div>
 			<div>
 			<h1 id="title">Hey! I am Nikita.</h1>
