--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<nav>
-			<ul id='navbar'>
-			  <li><a href="#welcome-section">About</a></li>
-			  <li><a href="#projects">Work</a></li>
-			  <li><a href="#profiles">Contact</a></li>
-			</ul>
-		  </nav>
+		<ul id='navbar'>
+			<li><a href="#profiles">Contact</a></li>
+			<li><a href="#projects">Work</a></li>
+			<li class="active"><a href="#welcome-section">About</a></li>
+		</ul>
 		<div id="welcome-section" class="int">
 		<div class="flex-container">
 			<div>
@@ -23,18 +21,42 @@
 			</div>
 			</div>
 		</div>
+		
+		<!-- projects set 1-->
+		<div id="projects" class="flex-two">
+			<div class="project-tile">
+				 <a href="https://github.com/ng0035/TouristWebsite" target="_blank">
+					 <img src="https://drive.google.com/uc?id=1ARAN4sSD8oT4TC-7JeeGFv1dGeh36fCU" class="img-thumbnail thumb" alt="Tourist Website"/>
+				 </a>
+			 </div>
+			  <div class="project-tile">
+				 <a href="https://github.com/ng0035/Online-Exam-System" target="_blank">
+					 <img src="https://raw.githubusercontent.com/ng0035/Online-Exam-System/master/home.png" class="img-thumbnail thumb" alt="Tourist Website"/>
+				   </a>
+			 </div>
+				 <div class="project-tile">
+				   <a href="https://github.com/ng0035/random-quote-generator" target="_blank">
+					 <img src="https://raw.githubusercontent.com/ng0035/random-quote-generator/master/Screenshot%20from%202018-10-18%2010-36-17.png" class="img-thumbnail thumb" alt="Tourist Website"/>
+				 </a>
+			 </div>  
+		 </div>
+		 
+		<!-- projects set 2-->
 		<div id="projects" class="flex-two">
 		   <div class="project-tile">
-			   <img src="https://drive.google.com/uc?id=1ARAN4sSD8oT4TC-7JeeGFv1dGeh36fCU" class="img-thumbnail thumb" alt="Tourist Website"/>
-			 <a href="https://github.com/ng0035/TouristWebsite" target="_blank">Tourist Website</a>
+				<a href="https://github.com/ng0035/TouristWebsite" target="_blank">
+					<img src="https://drive.google.com/uc?id=1ARAN4sSD8oT4TC-7JeeGFv1dGeh36fCU" class="img-thumbnail thumb" alt="Tourist Website"/>
+				</a>
 			</div>
 			 <div class="project-tile">
-			   <img src="https://raw.githubusercontent.com/ng0035/Online-Exam-System/master/home.png" class="img-thumbnail thumb" alt="Tourist Website"/>
-			  <a href="https://github.com/ng0035/Online-Exam-System" target="_blank">Online Examination System</a>
+				<a href="https://github.com/ng0035/Online-Exam-System" target="_blank">
+					<img src="https://raw.githubusercontent.com/ng0035/Online-Exam-System/master/home.png" class="img-thumbnail thumb" alt="Tourist Website"/>
+			  	</a>
 			</div>
 				<div class="project-tile">
-			   <img src="https://raw.githubusercontent.com/ng0035/random-quote-generator/master/Screenshot%20from%202018-10-18%2010-36-17.png" class="img-thumbnail thumb" alt="Tourist Website"/>
-			  <a href="https://github.com/ng0035/random-quote-generator" target="_blank">Random Quote Generator</a>
+			  	<a href="https://github.com/ng0035/random-quote-generator" target="_blank">
+					<img src="https://raw.githubusercontent.com/ng0035/random-quote-generator/master/Screenshot%20from%202018-10-18%2010-36-17.png" class="img-thumbnail thumb" alt="Tourist Website"/>
+				</a>
 			</div>  
 		</div>
 		 <h2 align="center"> Let's Connect!</h2>
