--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<img src="image.jpg" alt="my picture" class="avtar"/>
 			</div>
 			<div>
-			<h1 id="title">Hey! I am Nikita.</h1>
-			  <h4> A web developer.</h4>
+			<h1>Hey! I am Nikita.</h1>
+			  <h4>Looking for a web developer? Here am I. Currently pursuing my Master's in Computer Science from Stony Brook University, graduating December 2020. My interests lie in designing and developing innovative UI while keeping the user interaction with user in mind. Machine learning enthusiast. Worked on various projects as mentioned below. Have a look and let me know if you find we can work together!</h4>
 			</div>
 			</div>
 		</div>
