--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		  <a id="profile-link" href="https://www.linkedin.com/in/nikitagupta0809/" target="_blank">
 		  <img src="https://drive.google.com/uc?id=1qXt1rv51utNG1aEYRkyWfoNL0FUr-tM7" alt="linkedin"/>
 		  </a>
-		  
+		  <a href="ta.html">TA for 305</a>
 		</div>
 	</body>
 </html>
