--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</a>
 			</div>  
 		</div>
-		 <h2 align="center"> Let's Connect!</h2>
+		 <h2 align="center"> Let's m,nConnect!</h2>
 		<div id="profiles">
 		  <a id="profile-link" href="https://github.com/ng0035" target="_blank">
 		  <img src="https://drive.google.com/uc?id=1d1Abwk2GGxGrxORu5exz4hKOAnv5o9ar" alt="github"/>
