--- a/index.html
+++ b/index.html
@@ -3,76 +3,53 @@
 	<head>
 		<title>My portfolio</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	</head>
 	<body>
-		<div class="container">	
-			<ul id='navbar'>
-				<li><a href="#profiles">Contact</a></li>
-				<li><a href="#projects">Work</a></li>
-				<li class="active"><a href="#welcome-section">About</a></li>
-			</ul>
-			<div id="welcome-section" class="int">
-			<div class="flex-container">
-				<div>
-				<img src="image.jpg" alt="my picture" class="avtar"/>
+		
+		<ul id='navbar'>
+			<li><a href="#contact">Contact</a></li>
+			<li><a href="#projects">Work</a></li>
+			<li><a href="#welcome-section">About</a></li>
+		</ul>
+
+
+		<div class="container">
+			<div id="welcome-section">	
+				<div class="text">
+					<h2>Hi! I am Nikita. <br> I am a Web Developer.</h2> 
 				</div>
-				<div>
-				<h1>Hey! I am Nikita.</h1>
-				<h4>Looking for a web developer? Here am I. Currently pursuing my Master's in Computer Science from Stony Brook University, graduating December 2020. My interests lie in designing and developing innovative UI while keeping the user interaction with user in mind. Machine learning enthusiast. Worked on various projects as mentioned below. Have a look and let me know if you find we can work together!</h4>
+				<div class="image">
+					<div class="container">
+						<img src="image.jpg" alt="my picture" class="img-fluid rounded"/>
+					</div>
 				</div>
-				</div>
-			</div>
-			
-			<!-- projects set 1-->
-			<div id="projects" class="flex-two">
-				<div class="project-tile">
-					<a href="https://github.com/ng0035/TouristWebsite" target="_blank">
-						<img src="https://drive.google.com/uc?id=1ARAN4sSD8oT4TC-7JeeGFv1dGeh36fCU" class="img-thumbnail thumb" alt="Tourist Website"/>
-					</a>
-				</div>
-				<div class="project-tile">
-					<a href="https://github.com/ng0035/Online-Exam-System" target="_blank">
-						<img src="https://raw.githubusercontent.com/ng0035/Online-Exam-System/master/home.png" class="img-thumbnail thumb" alt="Tourist Website"/>
-					</a>
-				</div>
-					<div class="project-tile">
-					<a href="https://github.com/ng0035/random-quote-generator" target="_blank">
-						<img src="https://raw.githubusercontent.com/ng0035/random-quote-generator/master/Screenshot%20from%202018-10-18%2010-36-17.png" class="img-thumbnail thumb" alt="Tourist Website"/>
-					</a>
-				</div>  
-			</div>
-			
-			<!-- projects set 2-->
-			<div id="projects" class="flex-two">
-			<div class="project-tile">
-					<a href="https://github.com/ng0035/TouristWebsite" target="_blank">
-						<img src="https://drive.google.com/uc?id=1ARAN4sSD8oT4TC-7JeeGFv1dGeh36fCU" class="img-thumbnail thumb" alt="Tourist Website"/>
-					</a>
-				</div>
-				<div class="project-tile">
-					<a href="https://github.com/ng0035/Online-Exam-System" target="_blank">
-						<img src="https://raw.githubusercontent.com/ng0035/Online-Exam-System/master/home.png" class="img-thumbnail thumb" alt="Tourist Website"/>
-					</a>
-				</div>
-					<div class="project-tile">
-					<a href="https://github.com/ng0035/random-quote-generator" target="_blank">
-						<img src="https://raw.githubusercontent.com/ng0035/random-quote-generator/master/Screenshot%20from%202018-10-18%2010-36-17.png" class="img-thumbnail thumb" alt="Tourist Website"/>
-					</a>
-				</div>  
-			</div>
-			<h2 align="center"> Let's m,nConnect!</h2>
-			<div id="profiles">
-			<a id="profile-link" href="https://github.com/ng0035" target="_blank">
-			<img src="https://drive.google.com/uc?id=1d1Abwk2GGxGrxORu5exz4hKOAnv5o9ar" alt="github"/>
-			</a>
-			<a id="profile-link" href="https://codepen.io/ng0035" target="_blank">
-			<img src="https://drive.google.com/uc?id=1TwSnP-B90DoOXoW_t4XZJ-OG-urdKtTm" alt="codepen"/>
-			</a>
-			<a id="profile-link" href="https://www.linkedin.com/in/nikitagupta0809/" target="_blank">
-			<img src="https://drive.google.com/uc?id=1qXt1rv51utNG1aEYRkyWfoNL0FUr-tM7" alt="linkedin"/>
-			</a>
-			<a href="ta.html">TA for 305</a>
 			</div>
 		</div>
+
+	
+			<div id="contact">
+				<br>
+				<h3><b>Contact Me</b> <br>
+					<br>
+					TA for the Undergraduate course: CS 305 <br>
+					Name: Nikita Gupta<br>
+                    Email: nikigupta@cs.stonybrook.edu<br>
+					Office Hours: 6 pm - 7 pm Tuesday @NCS<br>
+				</h3>
+			</div>
+			<div id="profiles">
+				<a id="profile-link" class="img-fluid" href="https://github.com/ng0035" target="_blank">
+				<img src="https://drive.google.com/uc?id=1d1Abwk2GGxGrxORu5exz4hKOAnv5o9ar" alt="github"/>
+				</a>
+				<a id="profile-link" class="img-fluid" href="https://codepen.io/ng0035" target="_blank">
+				<img src="https://drive.google.com/uc?id=1TwSnP-B90DoOXoW_t4XZJ-OG-urdKtTm" alt="codepen"/>
+				</a>
+				<a id="profile-link" class="img-fluid" href="https://www.linkedin.com/in/nikitagupta0809/" target="_blank">
+				<img src="https://drive.google.com/uc?id=1qXt1rv51utNG1aEYRkyWfoNL0FUr-tM7" alt="linkedin"/>
+				</a>
+			</div>
 	</body>
 </html>
