--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
 				<br>
 				<h3><b>Contact Me</b> <br>
 					<br>
-					TA for the Undergraduate course: CS 305 <br>
-					Name: Nikita Gupta<br>
-                    Email: nikigupta@cs.stonybrook.edu<br>
-					Office Hours: 6 pm - 7 pm Tuesday @NCS<br>
+					<div class="t">
+						TA for the Undergraduate course: CS 305 <br>
+						Name: Nikita Gupta<br>
+						Email: nikigupta@cs.stonybrook.edu<br>
+						Office Hours: 6 pm - 7 pm Tuesday @NCS<br>
+					</div>
 				</h3>
 			</div>
 			<div id="profiles">
