--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</div>
 				<div class="image">
 					<div class="container">
-						<img src="image.jpg" alt="my picture" class="img-fluid rounded"/>
+						<img src="https://drive.google.com/uc?id=15OVH05opFb_7nn4KJDVS0Qv92piYz7Ry" alt="my picture" class="img-fluid rounded"/>
 					</div>
 				</div>
 			</div>
