--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</h3>
 			</div>
 			<div id="profiles">
-				<a id="profile-link" class="img-fluid" href="https://github.com/ng0035" target="_blank">
+				<a id="profile-link" class="img-fluid" href="https://github.com/nikitagupta0809" target="_blank">
 				<img src="https://drive.google.com/uc?id=1d1Abwk2GGxGrxORu5exz4hKOAnv5o9ar" alt="github"/>
 				</a>
 				<a id="profile-link" class="img-fluid" href="https://codepen.io/ng0035" target="_blank">
