--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">	
 	</head>
 	<body>
 		
@@ -28,7 +28,52 @@
 				</div>
 			</div>
 		</div>
+		<div id="projects" class="container-fluid">
+			<br>
+				<h3><b>Projects</b> <br>
+					<div class="container py-5 bg-faded">
+						<div class="card-columns">
+							
+							<div class="container">
+								<div class="card init">
+								  <img class="card-img-top" src="https://drive.google.com/uc?id=1l8KBeEoEoH6kBp03xzTuCmlGoBDOlTpN" alt="Card image" style="width:100%">
+								  <div class="card-body">
+									<h4 class="card-title">D3 Visualization</h4>
+									<div class="card-text description">Aimed</div>
+									<a href="project1/index.html" class="btn btn-primary">Click to know more!</a>
+								 </div>
+								</div>
+								<br>
+							</div>  
 
+						   <div class="container">
+								<div class="card init">
+								  <img class="card-img-top" src="https://drive.google.com/uc?id=1VRBiaBEOLLwOSSMCgRyHIF-N6Sx07Guj" alt="Card image" style="width:100%">
+								  <div class="card-body">
+									<h4 class="card-title">Startup 101</h4>
+									<div class="card-text description">Aimed</div>
+									<a href="project2/index.html" class="btn btn-primary">Click to know more!</a>
+								 </div>
+								</div>
+								<br>
+							</div> 
+
+						   <div class="container">
+								<div class="card init">
+								  <img class="card-img-top" src="https://drive.google.com/uc?id=1v1_2o0kmxlijW4GQKbgVQJXl4jPAgMOT" alt="Card image" style="width:100%">
+								  <div class="card-body">
+									<h4 class="card-title">Startup 101</h4>
+									<div class="card-text description">Aimed</div>
+									<a href="https://www.kaggle.com/nikitagupta09/house-price-prediction-gradient-boosting-ll" class="btn btn-primary">Click to know more!</a>
+								 </div>
+								</div>
+								<br>
+							</div>    
+
+						</div>
+					</div>
+				</h3>
+		</div>
 	
 			<div id="contact">
 				<br>
