--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								  <img class="card-img-top" src="https://drive.google.com/uc?id=1l8KBeEoEoH6kBp03xzTuCmlGoBDOlTpN" alt="Card image" style="width:100%">
 								  <div class="card-body">
 									<h4 class="card-title">D3 Visualization</h4>
-									<div class="card-text description">Aimed</div>
+									<div class="card-text description">A D3 project to visualise data.</div>
 									<a href="project1/index.html" class="btn btn-primary">Click to know more!</a>
 								 </div>
 								</div>
@@ -50,8 +50,8 @@
 								<div class="card init">
 								  <img class="card-img-top" src="https://drive.google.com/uc?id=1VRBiaBEOLLwOSSMCgRyHIF-N6Sx07Guj" alt="Card image" style="width:100%">
 								  <div class="card-body">
-									<h4 class="card-title">Startup 101</h4>
-									<div class="card-text description">Aimed</div>
+									<h4 class="card-title">Fest Website</h4>
+									<div class="card-text description">Static website developed in HTML, CSS and JS.</div>
 									<a href="project2/index.html" class="btn btn-primary">Click to know more!</a>
 								 </div>
 								</div>
@@ -62,8 +62,8 @@
 								<div class="card init">
 								  <img class="card-img-top" src="https://drive.google.com/uc?id=1v1_2o0kmxlijW4GQKbgVQJXl4jPAgMOT" alt="Card image" style="width:100%">
 								  <div class="card-body">
-									<h4 class="card-title">Startup 101</h4>
-									<div class="card-text description">Aimed</div>
+									<h4 class="card-title">House Price Prediction</h4>
+									<div class="card-text description">A data science project to predict house prices in Python.</div>
 									<a href="https://www.kaggle.com/nikitagupta09/house-price-prediction-gradient-boosting-ll" class="btn btn-primary">Click to know more!</a>
 								 </div>
 								</div>
