--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								  <img class="card-img-top" src="https://drive.google.com/uc?id=1l8KBeEoEoH6kBp03xzTuCmlGoBDOlTpN" alt="Card image" style="width:100%">
 								  <div class="card-body">
 									<h4 class="card-title">D3 Visualization</h4>
-									<div class="card-text description">A D3 project to visualise data.</div>
+									<h6>A D3 project to visualise data in an interactive way.<h6>
 									<a href="p1/index.html" class="btn btn-primary">Click to know more!</a>
 								 </div>
 								</div>
@@ -51,7 +51,7 @@
 								  <img class="card-img-top" src="https://drive.google.com/uc?id=1VRBiaBEOLLwOSSMCgRyHIF-N6Sx07Guj" alt="Card image" style="width:100%">
 								  <div class="card-body">
 									<h4 class="card-title">Fest Website</h4>
-									<div class="card-text description">Static website developed in HTML, CSS and JS.</div>
+									<h6>Static website developed in HTML, CSS and JS.</h6>
 									<a href="project2/index.html" class="btn btn-primary">Click to know more!</a>
 								 </div>
 								</div>
@@ -63,7 +63,7 @@
 								  <img class="card-img-top" src="https://drive.google.com/uc?id=1v1_2o0kmxlijW4GQKbgVQJXl4jPAgMOT" alt="Card image" style="width:100%">
 								  <div class="card-body">
 									<h4 class="card-title">House Price Prediction</h4>
-									<div class="card-text description">A data science project to predict house prices in Python.</div>
+									<h6>A data science project to predict house prices in Python.</h6>
 									<a href="https://www.kaggle.com/nikitagupta09/house-price-prediction-gradient-boosting-ll" class="btn btn-primary">Click to know more!</a>
 								 </div>
 								</div>
