--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
 		<div id="projects" class="container-fluid">
 			<br>
-				<h3><b>Projects</b> <br>
+				<h3><b class="white">Projects</b> <br>
 					<div class="container py-5 bg-faded">
 						<div class="card-columns">
 							
