--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								  <div class="card-body">
 									<h4 class="card-title">D3 Visualization</h4>
 									<h6>A D3 project to visualise data in an interactive way.<h6>
-									<a href="p1/index.html" class="btn btn-primary">Click to know more!</a>
+									<a href="project1/index.html" class="btn btn-primary">Click to know more!</a>
 								 </div>
 								</div>
 								<br>
