--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
 					<div class="t">
 						<div class="list-group">
 							
+							<a href="https://link.springer.com/chapter/10.1007/978-981-15-1286-5_61" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
+								<div class="d-flex w-100 justify-content-between">
+								  <h5 class="mb-1">Dynamic Web with Automatic Code Generation Using Deep Learning</h5>
+								  <small>Feb 29, 2020 (Springer)</small>
+								</div><br>
+								<p class="mb-1">We introduce a model that can be used to automate the process of generating front-end code from hand-drawn wireframes by leveraging deep learning techniques.</p>
+								<small>The image features of the GUI mock-up which is fed to the model as input are extracted to generate markup tags as tokens and rendered in the form of reusable components achieving an overall BLEU score of 0.92.</small>
+							  </a>
+
 							<a href="http://www.jetir.org/papers/JETIR1905673.pdf" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
 							  <div class="d-flex w-100 justify-content-between">
 								<h5 class="mb-1">LOAD BALANCING: A Classic Technique For Resource Management</h5>
