--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<div id="welcome-section">	
 				<div class="text">
-					<h2>Hi! I am Nikita. <br> I am a Web Developer. I love exploring new technologies, implementing them and then writing about them so I can help the community. My primary interests are budding front-end technologies, data science and visualization, database technologies, technical documentation and full stack development.</h2> 
+					<h2>Hi! I am Nikita.</h2><h4> <br> I am a Web Developer. I love exploring new technologies, implementing them and then writing about them so I can help the community. My primary interests are budding front-end technologies, data science and visualization, database technologies, technical documentation and full stack development.</h4> 
 				</div>
 				<div class="image">
 					<div class="container">
