--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<div id="welcome-section">	
 				<div class="text">
-					<h2>Hi! I am Nikita.</h2><br><h4> <br> I am a Web Developer. I love exploring new technologies, implementing them and then writing about them so I can help the community. My primary interests are budding front-end technologies, data science and visualization, database technologies, technical documentation and full stack development.</h4> 
+					<h2>Hi! I am Nikita.</h2><br><h4> I am a Web Developer. I love exploring new technologies, implementing them and then writing about them so I can help the community. My primary interests are budding front-end technologies, data science and visualization, database technologies, technical documentation and full stack development.</h4> 
 				</div>
 				<div class="image">
 					<div class="container">
@@ -68,8 +68,8 @@
 								<div class="card init">
 								  <img class="card-img-top" src="https://drive.google.com/uc?id=1v1_2o0kmxlijW4GQKbgVQJXl4jPAgMOT" alt="Card image" style="width:100%">
 								  <div class="card-body">
-									<h4 class="card-title">House Price Prediction</h4>
-									<h6>A data science project to predict house prices in Python.</h6>
+									<h4 class="card-title">Evaluation of Dimensionality Reduction Techniques.</h4>
+									<h6>A data science project to evaluate the various DR techniques.</h6>
 									<a href="https://www.kaggle.com/nikitagupta09/house-price-prediction-gradient-boosting-ll" class="btn btn-primary">Click to know more!</a>
 								 </div>
 								</div>
