--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								  <div class="card-body">
 									<h4 class="card-title">Evaluation of Dimensionality Reduction Techniques.</h4>
 									<h6>A data science project to evaluate the various DR techniques.</h6>
-									<a href="https://www.kaggle.com/nikitagupta09/house-price-prediction-gradient-boosting-ll" class="btn btn-primary">Click to know more!</a>
+									<a href="https://github.com/nikitagupta0809/DataScienceProject/blob/master/Final_report.pdf" class="btn btn-primary">Click to know more!</a>
 								 </div>
 								</div>
 								<br>
