--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	</head>
 	<body>
 
-		<!-- Navbar -->
+
+
+		<div class="wrapper">
+					<!-- Navbar -->
 		<ul id='navbar' class="container-fluid nav-pills nav-fill justify-content-center">
             <li class="nav-item brand"><a href="#" class="nav-link"><b>Nikita Gupta</b></a></li>
                 <li class="nav-item links"><a class="nav-link" href="#welcome-section">About</a></li>
@@ -17,22 +20,39 @@
                 <li class="nav-item links"><a class="nav-link" href="#publications">Publications</a></li>
                 <li class="nav-item links"><a class="nav-link" href="#profiles">Contact Me!</a></li>
         </ul>
-
+			<h2>Animated wallpaper</h2>
+			<div class="box">
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
+		</div>
 		<!-- welcome section -->
 		<div class="container">
-			<div id="welcome-section">	
-				<div class="text">
-					<h2>Hi! I am Nikita.</h2><br><h4> I am a Web Developer. I love exploring new technologies, implementing them and then writing about them so I can help the community. My primary interests are budding front-end technologies, data science and visualization, database technologies, technical documentation and full stack development.</h4> 
-				</div>
+			
+			<div id="welcome-section">
 				<div class="image">
 					<div class="container">
-						<img src="https://drive.google.com/uc?id=15OVH05opFb_7nn4KJDVS0Qv92piYz7Ry" alt="my picture" class="img-fluid rounded"/>
+						<img src="https://drive.google.com/uc?id=15OVH05opFb_7nn4KJDVS0Qv92piYz7Ry" alt="my picture" class="rounded-circle"/>
 					</div>
 				</div>
+				
+				<div class="text">
+					<p>Hi! I am Nikita. I am a Web Developer. I love exploring new technologies, implementing them and then writing about them so I can help the community. My primary interests are budding front-end technologies, data science and visualization, database technologies, technical documentation and full stack development.</p> 
+				</div>
+				
 			</div>
 		</div>
 
 		<!-- Projects -->
+	
 		<div id="projects" class="container-fluid">
 			<br><br><br>
 				<h3><b class="white">Projects</b> <br>
@@ -123,7 +143,7 @@
 					</div>
 				</div>
 		</div>
-		
+	
 		<!-- publications -->
 		<div id="publications">
 			<div class="container">
