--- a/index.html
+++ b/index.html
@@ -241,17 +241,24 @@
 		<div id="profiles">
 			<div class="container">
 				<h3><b class="white">Profiles</b> <br><br><br>
-				<a id="profile-link" class="img-fluid" href="https://github.com/nikitagupta0809" target="_blank">
-				<img src="https://drive.google.com/uc?id=1d1Abwk2GGxGrxORu5exz4hKOAnv5o9ar" alt="github"/>
-				</a>
-				<a id="profile-link" class="img-fluid" href="https://codepen.io/ng0035" target="_blank">
-				<img src="https://drive.google.com/uc?id=1TwSnP-B90DoOXoW_t4XZJ-OG-urdKtTm" alt="codepen"/>
-				</a>
-				<a id="profile-link" class="img-fluid" href="https://www.linkedin.com/in/nikitagupta0809/" target="_blank">
-				<img src="https://drive.google.com/uc?id=1qXt1rv51utNG1aEYRkyWfoNL0FUr-tM7" alt="linkedin"/>
-				</a>
+
+					<div class="p1">
+						<a id="profile-link" class="img-fluid" href="https://github.com/nikitagupta0809" target="_blank">
+						<img src="https://drive.google.com/uc?id=1d1Abwk2GGxGrxORu5exz4hKOAnv5o9ar" alt="github"/>
+						</a>
+						<a id="profile-link" class="img-fluid" href="https://codepen.io/ng0035" target="_blank">
+						<img src="https://drive.google.com/uc?id=1TwSnP-B90DoOXoW_t4XZJ-OG-urdKtTm" alt="codepen"/>
+						</a>
+						<a id="profile-link" class="img-fluid" href="https://www.linkedin.com/in/nikitagupta0809/" target="_blank">
+						<img src="https://drive.google.com/uc?id=1qXt1rv51utNG1aEYRkyWfoNL0FUr-tM7" alt="linkedin"/>
+						</a>
+					</div>
+					<div class="p2">
+		
+					</div>
+				</div>
 			</div>
-		</div>
+
 		<script src="d3 files/tooltip.js"></script>
 		<script src="d3 files/proglang.js"></script>
 		<script src="d3 files/web.js"></script>
