--- a/index.html
+++ b/index.html
@@ -240,8 +240,7 @@
 
 		<div id="profiles">
 			<div class="container">
-				<h3><b class="white">Profiles</b> <br><br><br>
-
+				<div class="cont">
 					<div class="p1">
 						<a id="profile-link" class="img-fluid" href="https://github.com/nikitagupta0809" target="_blank">
 						<img src="https://drive.google.com/uc?id=1d1Abwk2GGxGrxORu5exz4hKOAnv5o9ar" alt="github"/>
@@ -254,9 +253,12 @@
 						</a>
 					</div>
 					<div class="p2">
-		
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScv69qiiYs52XoK5doMy6UsMIUHFC_oTtnfpacPWEiREpkpxQ/viewform?embedded=true" width="100%" height="120%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 					</div>
 				</div>
+
+			</div>
+				
 			</div>
 
 		<script src="d3 files/tooltip.js"></script>
