--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 						</a>
 					</div>
 					<div class="p2">
-						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScv69qiiYs52XoK5doMy6UsMIUHFC_oTtnfpacPWEiREpkpxQ/viewform?embedded=true" width="100%" height="120%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScv69qiiYs52XoK5doMy6UsMIUHFC_oTtnfpacPWEiREpkpxQ/viewform?embedded=true" width="700" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 					</div>
 				</div>
 
