--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Myh portfolio</title>
+		<title>My portfolio</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -192,6 +192,16 @@
 					<div class="t">
 						<div class="list-group">
 							
+							<a href="https://medium.com/ny-healthcare-fights-covid19" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
+								<div class="d-flex w-100 justify-content-between">
+								  <h5 class="mb-1">New York Health Care Fights Covid-19</h5>
+								  <small>May 18, 2020 (Medium.com)</small>
+								</div><br>
+								<p class="mb-1">This is a data visualization and analysis blog which is aimed at identifying the different reasons for NY being the epicenter of COVID19 in the USA.</p>
+								<small> We have collected data from recent sources. Please follow the blog for insights!
+								</small>
+							  </a>
+
 							<a href="https://link.springer.com/chapter/10.1007/978-981-15-1286-5_61" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
 								<div class="d-flex w-100 justify-content-between">
 								  <h5 class="mb-1">Dynamic Web with Automatic Code Generation Using Deep Learning</h5>
@@ -224,7 +234,7 @@
 							<a href="https://medium.com/@nikitagupta0809/my-journey-from-new-delhi-to-new-york-a20bd3ab0dc4" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
 							  <div class="d-flex w-100 justify-content-between">
 								<h5 class="mb-1">My Journey — From New Delhi to New York</h5>
-								<small class="text-muted">June 29, 2019 (Medium)</small>
+								<small class="text-muted">June 29, 2019 (Medium.com)</small>
 							  </div><br>
 							  <p class="mb-1">Article trying to help all the students out there who already have plans about going for a Master's degree abroad or are just thinking about the same.</p>
 							  <small class="text-muted">This is my personal experience as I have devoted the last year to the same. I am trying to explain the various steps involved in the process of applying for a Master's degree abroad (more pertinent to the USA but similar for other countries too). </small>
@@ -243,13 +253,16 @@
 				<div class="cont">
 					<div class="p1">
 						<a id="profile-link" class="img-fluid" href="https://github.com/nikitagupta0809" target="_blank">
-						<img src="https://drive.google.com/uc?id=1d1Abwk2GGxGrxORu5exz4hKOAnv5o9ar" alt="github"/>
+						<img src="./assets/github.svg" alt="github" height="40" width="40"/>
 						</a>
 						<a id="profile-link" class="img-fluid" href="https://codepen.io/ng0035" target="_blank">
-						<img src="https://drive.google.com/uc?id=1TwSnP-B90DoOXoW_t4XZJ-OG-urdKtTm" alt="codepen"/>
+						<img src="./assets/codepen.svg" alt="codepen" height="40" width="40"/>
 						</a>
 						<a id="profile-link" class="img-fluid" href="https://www.linkedin.com/in/nikitagupta0809/" target="_blank">
-						<img src="https://drive.google.com/uc?id=1qXt1rv51utNG1aEYRkyWfoNL0FUr-tM7" alt="linkedin"/>
+						<img src="./assets/linkedin.svg" alt="linkedin" height="40" width="40"/>
+						</a>
+						<a id="profile-link" class="img-fluid" href="https://www.linkedin.com/in/nikitagupta0809/" target="_blank">
+							<img src="./assets/medium.svg" alt="linkedin" height="40" width="40"/>
 						</a>
 					</div>
 					<div class="p2">
@@ -260,6 +273,7 @@
 			</div>
 				
 			</div>
+			Icons made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
 
 		<script src="d3 files/tooltip.js"></script>
 		<script src="d3 files/proglang.js"></script>
