--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 						<a id="profile-link" class="img-fluid" href="https://www.linkedin.com/in/nikitagupta0809/" target="_blank">
 						<img src="./assets/linkedin.svg" alt="linkedin" height="40" width="40"/>
 						</a>
-						<a id="profile-link" class="img-fluid" href="https://www.linkedin.com/in/nikitagupta0809/" target="_blank">
+						<a id="profile-link" class="img-fluid" href="https://medium.com/@nikitagupta0809" target="_blank">
 							<img src="./assets/medium.svg" alt="linkedin" height="40" width="40"/>
 						</a>
 					</div>
