--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 						</h1>
 						<h2>Looking forward to expand my skillset.</h2>
 				</div>	
+				<button class="btn block"><a href="https://drive.google.com/file/d/1UOtGKhv4a2wj5We2Q0g0-kL596A0Wp1R/view?usp=sharing" target="_blank">Resume</a></button>
 			</div>
 		
 			<div class="box">
