--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="wrapper">
 			<!-- Navbar -->
 			<ul id='navbar' class="container-fluid nav-pills nav-fill justify-content-center">
-				<li class="nav-item brand"><a href="#" class="nav-link"><b>Nikita Gupta</b></a></li>
+					<li class="nav-item brand"><b>NIKITA GUPTA</b></li>
 					<li class="nav-item links"><a class="nav-link" href="#content">About</a></li>
 					<li class="nav-item links"><a class="nav-link" href="#skills">Skills</a></li>					
 					<li class="nav-item links"><a class="nav-link" href="#projects">Work</a></li>
@@ -30,7 +30,7 @@
 			<!-- welcome section -->
 			<div class="container content">
 				<div class="image">
-					<div class="container">
+					<div class="img-fluid">
 						<img src="https://drive.google.com/uc?id=15OVH05opFb_7nn4KJDVS0Qv92piYz7Ry" alt="my picture" class="rounded-circle"/>
 					</div>
 				</div>
@@ -42,7 +42,6 @@
 							data-period="2000"
 							data-rotate='[ "UI Developer.", "Data Analyst.", "Software Engineer."]'></span>
 						</h1>
-						<h2>Looking forward to expand my skillset.</h2>
 				</div>	
 				<button class="btn block"><a href="https://drive.google.com/file/d/1UOtGKhv4a2wj5We2Q0g0-kL596A0Wp1R/view?usp=sharing" target="_blank">Resume</a></button>
 			</div>
@@ -266,9 +265,8 @@
 							<img src="./assets/medium.svg" alt="linkedin" height="40" width="40"/>
 						</a>
 					</div>
-					<div class="p2">
-						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScv69qiiYs52XoK5doMy6UsMIUHFC_oTtnfpacPWEiREpkpxQ/viewform?embedded=true" width="700" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-					</div>
+					<!-- <div class="p2">
+					</div> -->
 				</div>
 
 			</div>
