--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">	
-		<link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
+		<link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400,500,600,700" rel="stylesheet" type="text/css" />
 		<script src="script.js"></script>
 		<!-- Load d3.js -->
 		<script src="https://d3js.org/d3.v4.js"></script>
@@ -19,31 +19,44 @@
 
 		<div class="wrapper">
 			<!-- Navbar -->
-			<ul id='navbar' class="container-fluid nav-pills nav-fill justify-content-center">
-					<li class="nav-item brand"><b>NIKITA GUPTA</b></li>
-					<li class="nav-item links"><a class="nav-link" href="#content">About</a></li>
-					<li class="nav-item links"><a class="nav-link" href="#skills">Skills</a></li>					
-					<li class="nav-item links"><a class="nav-link" href="#projects">Work</a></li>
-					<li class="nav-item links"><a class="nav-link" href="#publications">Publications</a></li>
-					<li class="nav-item links"><a class="nav-link" href="#profiles">Contact Me!</a></li>
-			</ul>
+			<header class="navbar">
+				<h3 class="nav-item brand">NIKITA GUPTA</h3>
+				<nav class="navclass">
+					<ul>
+						<!-- <li class="nav-item brand"><b>NIKITA GUPTA</b></li> -->
+						<li class="nav-item links"><a class="nav-link" href="#content">About</a></li>
+						<li class="nav-item links"><a class="nav-link" href="#skills">Skills</a></li>					
+						<li class="nav-item links"><a class="nav-link" href="#projects">Work</a></li>
+						<li class="nav-item links"><a class="nav-link" href="#publications">Publications</a></li>
+						<li class="nav-item links"><a class="nav-link" href="#profiles">Contact Me!</a></li>
+					</ul>
+				</nav>
+			</header>
+			
 			<!-- welcome section -->
 			<div class="container content">
+				<div class="text">
+					<h1>Hi! I am Nikita.</h1><br>
+					<h1> I am a
+						<span
+							class="txt-rotate"
+							data-period="2000"
+							data-rotate='[ "UI Developer.", "Data Analyst.", "Software Engineer."]'></span>
+					</h1>
+					<div class="btn-wrapper">
+						<button class="button btn"><a href="https://drive.google.com/file/d/1UOtGKhv4a2wj5We2Q0g0-kL596A0Wp1R/view?usp=sharing" target="_blank">Resume</a></button>
+					</div>
+
+				</div>
+
+
 				<div class="image">
 					<div class="img-fluid">
 						<img src="https://drive.google.com/uc?id=15OVH05opFb_7nn4KJDVS0Qv92piYz7Ry" alt="my picture" class="rounded-circle"/>
 					</div>
 				</div>
 				
-				<div class="text">
-					<h1>Hi! I am Nikita. I am a
-						<span
-							class="txt-rotate"
-							data-period="2000"
-							data-rotate='[ "UI Developer.", "Data Analyst.", "Software Engineer."]'></span>
-						</h1>
-				</div>	
-				<button class="btn block"><a href="https://drive.google.com/file/d/1UOtGKhv4a2wj5We2Q0g0-kL596A0Wp1R/view?usp=sharing" target="_blank">Resume</a></button>
+				
 			</div>
 		
 			<div class="box">
