--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
 			</div>
 					<!-- <div class="p2">
 					</div> -->
-
+					<!-- <p>Icons made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+					</p> -->
 		</div>
 				
-			Icons made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-
+			
 		<script src="d3 files/tooltip.js"></script>
 		<script src="d3 files/proglang.js"></script>
 		<script src="d3 files/web.js"></script>
