--- a/index.html
+++ b/index.html
@@ -269,10 +269,13 @@
 							<img src="./assets/medium.svg" alt="linkedin" height="40" width="40"/>
 						</a>
 			</div>
+			<div class="copyrights">
+				<p>Copyright ©2020 Nikita Gupta All rights reserved || Icons made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+				</p>
+			</div>
 					<!-- <div class="p2">
 					</div> -->
-					<!-- <p>Icons made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-					</p> -->
+				
 		</div>
 				
 			
