--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<!-- Skills -->
 		<div id="skills" class="container">
 			<h3><b>Skills</b> <br>
-			<div class="row">
+			<!-- <div class="row">
 				<div class="web">
 					<h5>Web Stack: </h5>
 					<h6>MongoDB + ExpressJS + ReactJS + NodeJS</h6>
@@ -86,8 +86,8 @@
 					<h5>Database Technologies</h5>
 					<div id="barchart"></div>
 				</div>
-			</div>
-			<div class="row">
+			</div> -->
+			<!-- <div class="row"> -->
 <!-- 				
 				<div class="db">
 					<h5>Data Science</h5>
