--- a/resume.html
+++ b/resume.html
@@ -21,11 +21,11 @@
 			<nav class="navclass">
 				<ul>
 					<!-- <li class="nav-item brand"><b>NIKITA GUPTA</b></li> -->
-					<li class="nav-item links"><a class="nav-link" href="#content">About</a></li>
-					<li class="nav-item links"><a class="nav-link" href="#skills">Skills</a></li>					
-					<li class="nav-item links"><a class="nav-link" href="#projects">Work</a></li>
-					<li class="nav-item links"><a class="nav-link" href="#publications">Publications</a></li>
-					<li class="nav-item links"><a class="nav-link" href="#profiles">Contact Me!</a></li>
+					<li class="nav-item links"><a class="nav-link" href="./index.html">About</a></li>
+					<li class="nav-item links"><a class="nav-link" href="./index.html">Skills</a></li>					
+					<li class="nav-item links"><a class="nav-link" href="./index.html">Work</a></li>
+					<li class="nav-item links"><a class="nav-link" href="./index.html">Publications</a></li>
+					<li class="nav-item links"><a class="nav-link" href="./index.html">Contact Me!</a></li>
 				</ul>
 			</nav>
         </header>
