updated font color

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 									  <div class="card-body">
 										<h4 class="card-title">NY HealthCare Fights COVID19</h4>
 										<h6>A data visualization project to visualize the factors affecting the fight of NY against COVID19.<h6>
-										<a href="https://www.youtube.com/watch?v=vWtnofKxDcU&t=72s" class="btn btn-primary">Click to know more!</a>
+										<a href="https://www.youtube.com/watch?v=vWtnofKxDcU&t=72s" class="btn btn-d">Click to know more!</a>
 									 </div>
 									</div>
 									<br>
@@ -221,7 +221,7 @@
 									  <div class="card-body">
 										<h4 class="card-title">D3.js Basic Interface</h4>
 										<h6>A D3 project to visualise data in an interactive way.<h6>
-										<a href="project1/index.html" class="btn btn-primary">Click to know more!</a>
+										<a href="project1/index.html" class="btn btn-d">Click to know more!</a>
 									 </div>
 									</div>
 									<br>
@@ -233,7 +233,7 @@
 									  <div class="card-body">
 										<h4 class="card-title">Movies Dataset Visualisation</h4>
 										<h6>Data science + Data visualization using D3.js for front end and flask (Python) for backend server.</h6>
-										<a href="https://www.youtube.com/watch?v=3Td5Ut3yAXQ" class="btn btn-primary">Click to know more!</a>
+										<a href="https://www.youtube.com/watch?v=3Td5Ut3yAXQ" class="btn btn-d">Click to know more!</a>
 									 </div>
 									</div>
 									<br>
@@ -254,7 +254,7 @@
 								  <div class="card-body">
 									<h4 class="card-title">Evaluation of Dimensionality Reduction Techniques.</h4>
 									<h6>A data science project to evaluate the various DR techniques.</h6>
-									<a href="https://github.com/nikitagupta0809/DataScienceProject/blob/master/Final_report.pdf" class="btn btn-primary">Click to know more!</a>
+									<a href="https://github.com/nikitagupta0809/DataScienceProject/blob/master/Final_report.pdf" class="btn btn-d">Click to know more!</a>
 								 </div>
 								</div>
 								<br>
@@ -265,7 +265,7 @@
 								  <div class="card-body">
 									<h4 class="card-title">House Price Prediction</h4>
 									<h6>A data science project to predict house prices in Python.</h6>
-									<a href="https://www.kaggle.com/nikitagupta09/house-price-prediction-gradient-boosting-ll" class="btn btn-primary">Click to know more!</a>
+									<a href="https://www.kaggle.com/nikitagupta09/house-price-prediction-gradient-boosting-ll" class="btn btn-d">Click to know more!</a>
 								 </div>
 								</div>
 								<br>
@@ -285,7 +285,7 @@
 							  <div class="card-body">
 								<h4 class="card-title">Job Portal (MERN STACK)</h4>
 								<h6>A full-fledged job portal which allows a candidate to search and apply for jobs and a recruiter to view applicants.<h6>
-								<a href="https://github.com/nikitagupta0809/JobPortal" class="btn btn-primary">Click to know more!</a>
+								<a href="https://github.com/nikitagupta0809/JobPortal" class="btn btn-d">Click to know more!</a>
 							 </div>
 							</div>
 							<br>
@@ -297,7 +297,7 @@
 							  <div class="card-body">
 								<h4 class="card-title">React Fetching Data from REDDIT API</h4>
 								<h6>A React project with technical documentation to fetch data from a Reddit API.<h6>
-								<a href="https://github.com/nikitagupta0809/ReactFetchingData" class="btn btn-primary">Click to know more!</a>
+								<a href="https://github.com/nikitagupta0809/ReactFetchingData" class="btn btn-d">Click to know more!</a>
 							 </div>
 							</div>
 							<br>
@@ -309,7 +309,7 @@
 							  <div class="card-body">
 								<h4 class="card-title">Fest Website</h4>
 								<h6>Static website developed in HTML, CSS and JS.</h6>
-								<a href="project2/index.html" class="btn btn-primary">Click to know more!</a>
+								<a href="project2/index.html" class="btn btn-d">Click to know more!</a>
 							 </div>
 							</div>
 							<br>
