font size fixed

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 			<!-- welcome section -->
 				<div class="content">
 					<div class="text">
-						<p>Hi! I am Nikita.</p><br>
-						<p> I am a
+						<h3 class="title-heading">Hi! I am Nikita.</h3><br>
+						<h3 class="title-heading"> I am a
 							<span
 								class="txt-rotate"
 								data-period="2000"
 								data-rotate='[ "UI Developer.", "Data Analyst.", "Software Engineer."]'></span>
-						</p>
+						</h3>
 						<div class="btn-wrapper">
 							<button class="button btn"><a href="./resume.html" target="_blank">Resume</a></button>
 						</div>
